# ash

./: .gitignore  Cargo.toml  README.md
src/: input_parsing.rs  main.rs
src/builtin/: alias.rs  mod.rs  redirection.rs
src/commands/: mod.rs
src/config/: mod.rs
src/input/: mod.rs
src/interface/: mod.rs
src/parsing/: mod.rs
